# apx-gui

./: .gitignore  README.md  meson.build
.github/workflows/: ci.yml
apx_gui/: apx-gui.gresource.xml  apx-gui.in  main.py  meson.build
apx_gui/core/: apx.py  apx_entities.py  meson.build  monitor.py  run_async.py
apx_gui/gtk/: create-pkgmanager.ui  create-stack.ui  create-subsystem.ui  editor.ui  entry-stack.ui  entry-subsystem.ui  help-overlay.ui  sidebar.ui  tab-pkgmanager.ui  tab-stack.ui  tab-subsystem.ui  window-main.ui
apx_gui/utils/: gtk.py  meson.build
apx_gui/widgets/: editor.py  entry_pkgmanager.py  entry_stack.py  entry_subsystem.py  meson.build  sidebar.py  tab_pkgmanager.py  tab_stack.py  tab_subsystem.py
apx_gui/windows/: create_pkgmanager.py  create_stack.py  create_subsystem.py  main_window.py  meson.build
apx_ide/: apx-ide.gresource.xml  apx-ide.in  main.py  meson.build
apx_ide/core/: apx.py  apx_entities.py  apx_exceptions.py  meson.build
apx_ide/gtk/: create-pkgmanager.ui  create-stack.ui  create-subsystem.ui  editor.ui  entry-pkgmanager.ui  entry-stack.ui  entry-subsystem.ui  sidebar.ui  tab-pkgmanager.ui  tab-stack.ui  tab-subsystem.ui  window-main.ui
apx_ide/utils/: gtk.py  meson.build
apx_ide/widgets/: editor.py  entry_pkgmanager.py  entry_stack.py  entry_subsystem.py  meson.build  sidebar.py  tab_pkgmanager.py  tab_stack.py  tab_subsystem.py
apx_ide/windows/: create_pkgmanager.py  create_stack.py  create_subsystem.py  main_window.py  meson.build
data/: meson.build  org.vanillaos.ApxGUI.appdata.xml.in  org.vanillaos.ApxGUI.desktop.in  org.vanillaos.ApxGUI.gschema.xml  org.vanillaos.ApxIDE.appdata.xml.in  org.vanillaos.ApxIDE.desktop.in  org.vanillaos.ApxIDE.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  debhelper-build-stamp  files
help/: meson.build
help/C/: getting-started-introduction.page  index.page  pkgmanagers-creation.page  pkgmanagers-introduction.page  stacks-creation.page  stacks-introduction.page  subsystems-creation.page  subsystems-introduction.page
po/: LINGUAS  POTFILES  apx_gui.pot  apx_ide.pot  ar.po  be.po  ca.po  cs.po  de.po  el.po  en_GB.po  eo.po  es.po  fi.po  fr.po  ga.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lo.po  meson.build  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_Hans.po  zh_Hant.po
