pages = [
  'index.page',
  'getting-started-introduction.page',
  'pkgmanagers-creation.page',
  'pkgmanagers-introduction.page',
  'stacks-creation.page',
  'stacks-introduction.page',
  'subsystems-creation.page',
  'subsystems-introduction.page',
  'legal.xml',
]

media = [
  'media/apx-gui.png',
  'media/apx-gui-builtin-pkgmanagers.png',
  'media/apx-gui-builtin-stacks.png',
  'media/apx-gui-create-pkgmanagers.png',
  'media/apx-gui-create-stacks.png',
  'media/apx-gui-create-subsystems.png',
]

gnome.yelp(meson.project_name(),
  sources: pages,
  media: media,
)
